--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,9 @@
 [versions]
+dashboard = "0.5.0"
 ftc = "11.0.0"
 
 [libraries]
+dashboard = { module = "com.acmerobotics.dashboard:dashboard", version.ref = "dashboard" }
 ftc-robot-core = { group = "org.firstinspires.ftc", name = "RobotCore", version.ref = "ftc" }
 ftc-hardware = { group = "org.firstinspires.ftc", name = "Hardware", version.ref = "ftc" }
 annotations = { group = "org.jetbrains", name = "annotations", version = "23.0.0" }
